--- a/djangotest/templates/show.html
+++ b/djangotest/templates/show.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Show menu</title>
+    <title>{{ name }}</title>
 </head>
 <body>
     <a href="/">К выбору меню</a>
